Made changes to the footer and the section

--- a/index.html
+++ b/index.html
@@ -49,20 +49,64 @@
                 </p>
             </div>
         </div>
+        <div class="header2">
+            <h2>Experience</h2>
+            <p id="experience-p"><b>ALX Software Engineering 14th</b>, <i>Nov 2022 - current</i> <br>
+                ● Participated in training in software engineering, including courses on programming
+                fundamentals, data structures, algorithms and web development</p>
+            <h2 id="soft-skills">Soft Skills</h2>    
+        </div>
+    </section>
+    <section id="first-skill">
+        <div class="skills-section">
+            <h3>Good communication skills</h3>
+            <p>A very essential skill that is needed to communicate technical information to non-technical
+                stakeholders. </p>
+        </div>
+    </section>
+    <section id="second-skill">
+        <div class="skills-section">
+            <h3>Problem-solving</h3>
+            <p>I am able to analyse a problem, identify the root cause, and develop a solution
+                that addresses the underlying issue.</p>
+        </div>
+    </section>
+    <section id="third-skill">
+        <div class="skills-section">
+            <h3>Collaboration</h3>
+            <p>I have developed a great ability of working in teams and contributing to the team
+                environment for beneficial purposes </p>
+        </div>
     </section>
     <section class="third-ctn">
         <div id="skill-container">
             <h2>Technical Skills</h2>
             <h3>Programming Languages</h3>
             <ul class="skill-items">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>C</li>
+                <li class="skill-list">HTML</li>
+                <li class="skill-list">CSS</li>
+                <li class="skill-list">JavaScript</li>
+                <li class="skill-list">C</li>
             </ul>
         </div>
+        <div class="contact">
+            <h2>Contact</h2>
+            <p><b>Address:</b> Gaa-Akanbi,Ilorin, Kwara State.</p>
+            <p><b>Phone:</b> +234(81)68915798</p>
+            <p><b>Email:</b> adewoyevictor@gmail.com</p>
+        </div>
     </section>
-    <footer class="contact-area"></footer>
+    <footer class="svg-icons">
+        <a href="https://github.com/vikkyava">
+            <img src="../Images/github.svg" alt="GitHub Link">
+        </a>
+        <a href="https://twitter.com/vicaydj">
+            <img src="../Images/twitter.svg" alt="GitHub Link">
+        </a>
+        <a href="https://www.facebook.com/jamie.jamesandrew">
+            <img src="../Images/facebook.svg" alt="GitHub Link">
+        </a>
+    </footer>
     <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
