Made changes to footer

--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
             <p><b>Email:</b> adewoyevictor@gmail.com</p>
         </div>
     </section>
-    <footer class="svg-icons">
+    <footer>
         <a href="https://github.com/vikkyava">
-            <img src="../Images/github.svg" alt="GitHub Link">
+            <img src="../Images/github.svg" alt="GitHub Link" class="svg-icons">
         </a>
         <a href="https://twitter.com/vicaydj">
-            <img src="../Images/twitter.svg" alt="GitHub Link">
+            <img src="../Images/twitter.svg" alt="GitHub Link" class="svg-icons">
         </a>
         <a href="https://www.facebook.com/jamie.jamesandrew">
-            <img src="../Images/facebook.svg" alt="GitHub Link">
+            <img src="../Images/facebook.svg" alt="GitHub Link" class="svg-icons">
         </a>
     </footer>
     <script src="./scripts/index.js" type="module"></script>
